# btc-web-utxo

./: Makefile  README.md  package-lock.json  package.json  tsconfig.json
docs/: index.html  transacter.js  transacter.js.map
python/: pyproject.toml  trezor-build-tx.py
reference_json/: bitgo_tx.json  bitgo_unspents.json  blockchain_info_unspents.json  trezor_io_tx.json  trezorio-tx-specific.json  trezorio-tx-specific.url
src/: dependencies.js  index.html  transacter.js  transacter.ts
